# SMACC

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  Doxyfile  LICENSE.txt  README.md  generate_debs.sh  generate_main_index.py  gh-pages.sh  ros-kinetic-backward-global-planner_0.0.1-0xenial_amd64.deb  ros-kinetic-backward-local-planner_0.0.1-0xenial_amd64.deb  ros-kinetic-event-aggregator_0.0.1-0xenial_amd64.deb  ros-kinetic-forward-global-planner_0.0.1-0xenial_amd64.deb  ros-kinetic-forward-local-planner_0.0.1-0xenial_amd64.deb  ros-kinetic-sm-hello-world-example_0.0.1-0xenial_amd64.deb  ros-kinetic-smacc-action-client-generic_0.0.1-0xenial_amd64.deb  ros-kinetic-smacc-interface-components_0.0.1-0xenial_amd64.deb  ros-kinetic-smacc-msgs_0.0.1-0xenial_amd64.deb  ros-kinetic-smacc-navigation-plugin_0.0.1-0xenial_amd64.deb  ros-kinetic-smacc-odom-tracker_0.0.1-0xenial_amd64.deb  ros-kinetic-smacc-planner-switcher_0.0.1-0xenial_amd64.deb  ros-kinetic-smacc-sensors_0.0.1-0xenial_amd64.deb  ros-kinetic-smacc_0.0.1-0xenial_amd64.deb  rosdep.yaml  testfile.txt  travis.yaml
examples/radial_motion_example/: CMakeLists.txt  package.xml
examples/radial_motion_example/config/: backward_local_planner.yaml  base_local_planer_overlay.yaml  navigation.rviz
examples/radial_motion_example/include/: radial_motion.h
examples/radial_motion_example/launch/: radial_motion.launch
radial_motion_example/: CMakeLists.txt  package.xml
radial_motion_example/config/: navigation.rviz  radial_motion_sm_config.yaml  retracting_local_planner.yaml
radial_motion_example/include/: radial_motion.h
radial_motion_example/include/states/: navigate_to_end_point.h  navigate_to_radial_start.h  return_to_radial_start.h  rotate_degrees.h  rotate_ten_degrees.h
radial_motion_example/launch/: radial_motion.launch
radial_motion_example/src/: radial_motion.cpp  tool_action_server.cpp
robodyn_mechanisms-307cc16ff58ee855b9f053afb8852a585a230a81/: CMakeLists.txt  mainpage.dox  manifest.xml
robodyn_mechanisms-307cc16ff58ee855b9f053afb8852a585a230a81/include/nasa_robodyn_mechanisms_core/: GripperSupervisor.h  JointCommandGripper.h  JointControlActualFsmGripper.h  JointControlActualFsmWrist.h  JointControlCommandFsmGripper.h  JointControlCommandFsmSeriesElastic.h  JointControlManagerFactory.h  JointControlManagerFinger.h  JointControlManagerGripper.h
robodyn_mechanisms-307cc16ff58ee855b9f053afb8852a585a230a81/src/: EmbeddedSmoother.cpp  FingerController.cpp  GripperPositionStateMachine.cpp  GripperSupervisor.cpp  JointCommandFinger.cpp  JointCommandRigid.cpp  JointCommandSeriesElastic.cpp  JointControlActualFsmFinger.cpp  JointControlActualFsmGripper.cpp  JointControlActualFsmSeriesElastic.cpp  JointControlCommandFsmFinger.cpp  JointControlCommandFsmGripper.cpp  JointControlCommandFsmWrist.cpp  JointControlManagerFactory.cpp  JointControlManagerFinger.cpp  JointControlManagerGripper.cpp  JointControlManagerSeriesElastic.cpp  JointControlManagerWrist.cpp  TubeTareMechanism.cpp
robodyn_mechanisms-307cc16ff58ee855b9f053afb8852a585a230a81/test/: EmbeddedSmoother_Test.cpp  FingerController_Test.cpp  GripperKinematics_Test.cpp  GripperPositionStateMachine_Test.cpp  JointCommandFactory_Test.cpp  JointCommandFinger_Test.cpp  JointCommandGripper_Test.cpp  JointCommandRigid_Test.cpp  JointCommandWrist_Test.cpp  JointControlManager_Test.cpp
smacc/: CHANGELOG.rst  CMakeLists.txt  package.xml
smacc/include/smacc/: all_event_aggregator.h  callback_counter_semaphore.h  client.h  smacc.h  (+39 more)
smacc/launch/: radial_motion.launch
smacc/test/: type_info_unit_test.cpp
smacc_client_library/battery_monitor_client/: CHANGELOG.rst  CMakeLists.txt  package.xml
smacc_client_library/keyboard_client/: CHANGELOG.rst  CMakeLists.txt  package.xml
smacc_client_library/microstrain_mips_client/: CHANGELOG.rst  CMakeLists.txt  package.xml
smacc_client_library/move_base_z_client_plugin/: CMakeLists.txt
smacc_client_library/move_group_interface_client/: CHANGELOG.rst  CMakeLists.txt  package.xml
smacc_client_library/multirole_sensor_client/: CHANGELOG.rst  CMakeLists.txt  package.xml
smacc_client_library/ros_publisher_client/: CHANGELOG.rst  CMakeLists.txt  package.xml
smacc_diagnostics/smacc_rviz_plugin/: CHANGELOG.rst  CMakeLists.txt  package.xml  plugin_description.xml
smacc_event_generator_library/eg_conditional_generator/: CHANGELOG.rst  CMakeLists.txt  package.xml
smacc_event_generator_library/eg_random_generator/: CMakeLists.txt  package.xml
smacc_interface_components/: CMakeLists.txt  package.xml
smacc_interface_components/src/: smacc_tool_plugin.cpp  tool_action_server_node.cpp
smacc_msgs/: .....  CHANGELOG.rst  CMakeLists.txt  package.xml
smacc_msgs/msg/: SmaccContainerInitialStatusCmd.msg  SmaccContainerStatus.msg  SmaccContainerStructure.msg  SmaccEvent.msg  SmaccEventGenerator.msg  SmaccLogicUnit.msg  SmaccOrthogonal.msg  SmaccSMCommand.msg  SmaccState.msg  SmaccStateMachine.msg  SmaccStateReactor.msg  SmaccStatus.msg  SmaccTransition.msg  SmaccTransitionLogEntry.msg
smacc_msgs/srv/: SmaccGetTransitionHistory.srv
smacc_navigation/smacc_planner_switcher/: CMakeLists.txt  package.xml
smacc_reelrbtx_plugin/: CMakeLists.txt  package.xml
smacc_reelrbtx_plugin/src/: reel.cpp
smacc_sm_examples/sm_radial_motion/: CHANGELOG.rst  CMakeLists.txt  package.xml
smacc_sm_reference_library/sm_atomic/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  package.xml.orig
smacc_sm_reference_library/sm_atomic_cb/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
smacc_sm_reference_library/sm_atomic_http/: CMakeLists.txt  package.xml
smacc_sm_reference_library/sm_atomic_threadable/: CMakeLists.txt  package.xml
smacc_tool_plugin_template/: CMakeLists.txt  package.xml
smacc_tool_plugin_template/action/: ToolControl.action
smacc_tool_plugin_template/src/: smacc_tool_plugin.cpp  tool_action_server_node.cpp
smacc_viewer/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
smacc_viewer/scripts/: introspection_container.py  smacc_viewer.py
smacc_viewer/test/: fake_sm_publisher.py
(+3301 files in other folders)
