<?xml version="1.0"?>
<package format="2">
  <name>smacc</name>
  <version>0.0.1</version>

  <description>SMACC is a ROS/C++ library to implement in easy and systematic way UML StateCharts (AKA state machines). SMACC is inspired by the SMACH ROS package and it is built on top of Boost StateChart library. Developed by Reel Robotics.
</description>

  <author email="ba@leadtank.org">Pablo Inigo Blasco</author>
  <author email="pibgeus@gmail.com">Pablo Inigo Blasco</author>

  <maintainer email="pibgeus@gmail.com">Pablo Inigo Blasco</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>smacc_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>move_base_msgs</build_depend>

  <build_depend>log4cxx</build_depend>
    
  <build_export_depend>actionlib</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>pluginlib</build_export_depend>
  
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>smacc_msgs</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>move_base_msgs</exec_depend>
  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>

</package>
