<?xml version="1.0" ?>
<package format="2">
  <name>smacc</name>
  <version>0.9.7</version>

  <description>SMACC is a ROS/C++ library to implement in easy and systematic way UML StateCharts (AKA state machines). SMACC is inspired by the SMACH ROS package and it is built on top of Boost StateChart library. Developed by Reel Robotics.
</description>

  <author email="pablo@ibrobotics.com">Pablo Inigo Blasco</author>
  <author email="ba@leadtank.org">Brett Aldrich</author>

  <maintainer email="pablo@ibrobotics.com">Pablo Inigo Blasco</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>smacc_msgs</depend>
  <depend>std_msgs</depend>
  <depend>actionlib_msgs</depend>
  <depend>controller_manager_msgs</depend>


  <depend>roscpp</depend>
  <depend>actionlib</depend>
  <depend>ros_control</depend>
  <depend>pluginlib</depend>

  <depend>log4cxx</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>

</package>
