<?xml version="1.0"?>
<package format="2">
  <name>smacc_tool_plugin_template</name>
  <version>0.0.1</version>
  <description>The smacc_tool_plugin_template package implements a template code to implement an SMACC Action Client Plugin for some tool.  Developed by Reel Robotics.</description>

  <author email="pibgeus@gmail.com">Pablo Inigo Blasco</author>
  <maintainer email="pibgeus@gmail.com">Pablo Inigo Blasco</maintainer>

  <license>MIT</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>smacc_core</build_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>smacc_core</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  
  <export>
      <smacc plugin="${prefix}/smacc_plugin.xml" />
      <rosdoc config="rosdoc.yaml" />
  </export>
</package>
