<?xml version="1.0" ?>
<package format="2">
  <name>smacc_msgs</name>
    <version>1.4.3</version>
  <description>
    this package contains a set of messages that are used by the introspection
    interfaces for smacc.
  </description>


  <license>BSD</license>

  <author>Brett Aldrich</author>
  <author>Pablo Iñigo Blasco</author>
  <maintainer email="pablo@ibrobotics.com">Pablo Iñigo Blasco</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>std_msgs</depend>

  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <build_export_depend>message_runtime</build_export_depend>


  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>
</package>
