<?xml version="1.0"?>
<package format="2">
  <name>smacc_reelrbtx_plugin</name>
  <version>0.0.1</version>
  <description>The smacc_reelrbtx_plugin package implements a Action Client Plugin for SMACC for the Reel Robotics Device.  Developed by Reel Robotics.</description>

  <author email="pibgeus@gmail.com">Pablo Inigo Blasco</author>
  <maintainer email="pibgeus@gmail.com">Pablo Inigo Blasco</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>smacc</build_depend>
  <build_depend>non_rt_helper</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <exec_depend>smacc</exec_depend>
  <exec_depend>non_rt_helper</exec_depend>  
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>

  <export>
      <smacc plugin="${prefix}/smacc_plugin.xml" />
  </export>
</package>
