<?xml version="1.0"?>
<package format="2">
  <name>battery_monitor_client</name>
  <version>1.3.2</version>  <description>The battery_monitor_client package</description>


  <maintainer email="pablo@ibrobotics.com">Pablo Iñigo Blasco</maintainer>



  <license>BSD-3</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/battery_monitor_client</url> -->






  <buildtool_depend>catkin</buildtool_depend>
  <depend>smacc</depend>


  <export>


  </export>
</package>
