<?xml version="1.0"?>
<package format="2">
  <name>keyboard_client</name>
  <version>0.9.1</version>
  <description>The keyboard_client package</description>

  
  <maintainer email="pablo@ibrobotics.com">Pablo Inigo Blasco</maintainer>


  
  <license>BSD-3</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/keyboard_client</url> -->


  


  
  <buildtool_depend>catkin</buildtool_depend>
  <depend>smacc</depend>

  
  <export>
    

  </export>
</package>
