<?xml version="1.0"?>
<package format="2">
  <name>microstrain_mips_client</name>
  <version>0.9.1</version>
  <description>The microstrain_mips_client package</description>

  
  <maintainer email="pablo@ibrobotics.com">Pablo Iñigo Blasco</maintainer>


  
  <license>BSD-3</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/microstrain_mips_client</url> -->


  


  
  <buildtool_depend>catkin</buildtool_depend>
  <depend>microstrain_mips</depend>
  <depend>smacc</depend>
  <depend>roscpp</depend>
  <depend>std_srvs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>


  
  <export>
    

  </export>
</package>
