<?xml version="1.0" ?>
<package format="2">
  <name>move_group_interface_client</name>
    <version>1.4.12</version>
  <description>The move_group_interface_client package</description>


  <maintainer email="pablo@ibrobotics.com">Pablo Iñigo Blasco</maintainer>



  <license>BSD-3</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/move_group_interface_client</url> -->






  <buildtool_depend>catkin</buildtool_depend>

  <depend>smacc</depend>
  <depend>moveit</depend>
  <depend>tf</depend>
  <depend>moveit_ros_planning_interface</depend>



  <export>


  </export>
</package>
