<?xml version="1.0"?>
<package format="2">
  <name>smacc_rviz_plugin</name>
  <version>1.3.2</version>  <description>The smacc_rviz_plugin package</description>


  <maintainer email="pablo@ibrobotics.com">Pablo Iñigo Blasco</maintainer>



  <license>BSD-3</license>









  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>qtbase5-dev</build_depend>
  <build_depend>rviz</build_depend>

  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-gui</exec_depend>
  <exec_depend>libqt5-widgets</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>smacc_msgs</exec_depend>



  <export>

    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
