<?xml version="1.0"?>
<package format="2">
  <name>smacc_planner_switcher</name>
  <version>0.0.0</version>
  <description>The smacc_planner_switcher package</description>

  <maintainer email="geus@todo.todo">geus</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <exec_depend>roscpp</exec_depend>

  <build_depend>smacc_core</build_depend>
  <exec_depend>smacc_core</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
      <rosdoc config="rosdoc.yaml" />
  </export>
</package>
